a1/brendan_gordon/TEST_PROGRAMS/invalidtype/serguei_nevarko/invalid2.min
var x : string;

x = 57.4;

print x;

